-Fixed Subclass elements not showing when hovered over. -Gave items their own constructors to avoid creating new ones everytime a request was made to change them. only the data of each changes on requests now. -Added Initializers(read: pseudo-object constructors) since js doesn't support them natively. -Maybe OOP wasn't the best model for handling this. But it does make things a little easier to follow.

--- a/Client Files/finalcss.css
+++ b/Client Files/finalcss.css
@@ -4,65 +4,61 @@ body {
   margin: auto;
   padding: 0;
 }
+
 #character-header {
-  z-index: -1;
   position: relative;
   width: 100%;
-  height: 20%;
-  margin: auto;
+  height: 30%;
 }
-#character-header > div {
-  position: absolute;
-}
-#character-header > div:hover > div {
-  display: flex;
-}
-#Subclass-slots {
-  display: flex;
-  flex-direction: row-reverse;
-  width: 30%;
-  height: 100%;
-  top: 50%;
-  right: 0%;
-  transform: translate(0,-50%);
-}
-#Subclass-slots img {
-  height: 100%;
-}
-#Subclass-slots > div {
-  height: 100%;
-  display: none;
-  flex-direction: row;
-}
-#Subclass-slots:hover div {
-  display: flex;
+#yes-man{
+  width: 100%;
+  height:100%;
 }
 #character-info {
-  top: 50%;
+  position: relative;
+  float: left;
   left: 50%;
+  top:50%;
   transform: translate(-50%,-50%);
   text-align: center;
 }
-
-#character-header > div > h1{
-  margin: 0;
-  color: white;
-}
-#emblem-icon{
+#emblem-icon {
+  position:absolute;
+  z-index: 1;
   height: 80%;
-  position: absolute;
   top: 50%;
   transform: translate(0,-50%);
   left: 0%;
-  z-index: 1;
 }
-#emblem-back{
+#emblem-back {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0%;
   left: 0%;
-  z-index: 0;
+  z-index: -1;
+}
+#subclass-container{
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
+  top: 50%;
+  transform: translate(0,-50%);
+  float: right;
+}
+#subclass {
+  height: 60%;
+}
+#subclass-equipment {
+  height: 100%;
+  display: none;
+  flex-direction: row;
+}
+#subclass-equipment > img {
+  height: 60%;
+}
+#subclass-container:hover >div {
+  display: flex;
 }
 .character-equipment{
   margin: auto;
